--- a/resources/sass/index.css
+++ b/resources/sass/index.css
@@ -28,22 +28,7 @@ body {
   font-size: 2rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  color: rgba(53, 0, 211, 0.9);
-}
-
-.header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-left: 2rem;
-  margin-top: 1rem;
-}
-
-.navigation-bar {
-  display: inherit;
+  color: #444;
 }
 
 .navigation-bar li {
@@ -52,7 +37,7 @@ body {
 
 .navigation-bar li a {
   text-decoration: none;
-  margin-right: 2rem;
+  color: inherit;
 }
 
 .navigation-bar li a:hover {
