--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -49,6 +49,7 @@ body {
     a {
       text-decoration: none;
       color: inherit;
+      display: inline-block;
     }
     a:hover {
       text-decoration: underline;
