--- a/resources/sass/index.css
+++ b/resources/sass/index.css
@@ -34,23 +34,43 @@ body {
 .header-logo {
   width: 30px;
   height: auto;
+  -webkit-transform: translateY(4px);
+          transform: translateY(4px);
 }
 
-.navigation-bar {
-  display: inline;
+.header-text {
+  display: inline-block;
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
 }
 
-.navigation-bar li {
+nav {
+  border: black 1px solid;
+  overflow: hidden;
+}
+
+nav ul {
   list-style-type: none;
 }
 
-.navigation-bar li a {
-  text-decoration: none;
-  color: inherit;
-  display: inline-block;
+nav li {
+  float: right;
 }
 
-.navigation-bar li a:hover {
+nav li a {
+  display: block;
+  padding: 8px;
+  text-decoration: none;
+  color: #444;
+}
+
+nav li a:hover {
   text-decoration: underline;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 /*# sourceMappingURL=index.css.map */
