--- a/resources/sass/index.css
+++ b/resources/sass/index.css
@@ -31,26 +31,46 @@ body {
   color: #444;
 }
 
-.header-logo {
-  width: 30px;
-  height: auto;
-  -webkit-transform: translateY(4px);
-          transform: translateY(4px);
+.logo-box {
+  border: orange 1px solid;
+  display: inline-block;
+  z-index: -1;
 }
 
-.header-text {
+.logo-icon {
+  width: 30px;
+  height: auto;
+}
+
+.logo-text {
   display: inline-block;
-  -webkit-transform: translateY(-5px);
-          transform: translateY(-5px);
+  -webkit-transform: translateY(0.7rem);
+          transform: translateY(0.7rem);
+}
+
+.logo-icon {
+  cursor: pointer;
+}
+
+.logo-text:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 nav {
-  border: black 1px solid;
-  overflow: hidden;
+  background-color: #fff;
 }
 
 nav ul {
   list-style-type: none;
+}
+
+nav li:nth-child(2) {
+  margin-right: 1rem;
+}
+
+nav li:nth-child(3) {
+  margin-right: 1rem;
 }
 
 nav li {
@@ -58,8 +78,9 @@ nav li {
 }
 
 nav li a {
-  display: block;
-  padding: 8px;
+  display: inline-block;
+  -webkit-transform: translateY(0.7rem);
+          transform: translateY(0.7rem);
   text-decoration: none;
   color: #444;
 }
@@ -72,5 +93,9 @@ nav li a:hover {
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+.content {
+  margin-top: 10rem;
 }
 /*# sourceMappingURL=index.css.map */
