--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -33,29 +33,49 @@ body {
   box-sizing: border-box;
   color: $color-darkGray;
 }
-.header-logo {
-  width: 30px;
-  height: auto;
-  transform: translateY(4px);
 
-  //   border: 1px solid black;
+.logo-box {
+  border: orange 1px solid;
+  display: inline-block;
+  z-index: -1;
 }
 
-.header-text {
+.logo-icon {
+  width: 30px;
+  height: auto;
+  //   transform: translateY(4px);
+  //   border: rgba(53, 0, 211, 0.9) 5px solid;
+}
+.logo-text {
   display: inline-block;
-  transform: translateY(-5px);
-  //   border: 1px solid black;
+  transform: translateY(0.7rem);
+  //   border: rgba(0, 179, 211, 0.9) 5px solid;
+}
+
+.logo-icon {
+  cursor: pointer;
+}
+
+.logo-text:hover {
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 nav {
-  //   display: flex;
-  //   background-color: #28b485;
-  border: black 1px solid;
-  overflow: hidden;
+  //   border: #28b485 1px solid;
+  background-color: #fff;
   ul {
     list-style-type: none;
-    // overflow: hidden;
-    // vertical-align: top;
+  }
+
+  li:nth-child(2) {
+    // border: rgba(211, 0, 116, 0.9) 5px solid;
+    margin-right: 1rem;
+  }
+
+  li:nth-child(3) {
+    // border: rgba(179, 211, 0, 0.9) 5px solid;
+    margin-right: 1rem;
   }
 
   li {
@@ -63,9 +83,10 @@ nav {
   }
 
   li a {
-    display: block;
-    padding: 8px;
-    // background-color: #dddddd;
+    // border: #28b485 1px solid;
+    display: inline-block;
+    // padding: 8px;
+    transform: translateY(0.7rem);
     text-decoration: none;
     color: $color-darkGray;
   }
@@ -79,4 +100,8 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+.content {
+  margin-top: 10rem;
 }
