--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -35,7 +35,6 @@ body {
 }
 
 .logo-box {
-  border: orange 1px solid;
   display: inline-block;
   z-index: -1;
 }
@@ -44,12 +43,13 @@ body {
   width: 30px;
   height: auto;
   //   transform: translateY(4px);
-  //   border: rgba(53, 0, 211, 0.9) 5px solid;
+  border: 1px red solid;
+  transform: translateY(0.3rem);
 }
 .logo-text {
   display: inline-block;
   transform: translateY(0.7rem);
-  //   border: rgba(0, 179, 211, 0.9) 5px solid;
+  margin-left: 1rem;
 }
 
 .logo-icon {
@@ -62,19 +62,20 @@ body {
 }
 
 nav {
-  //   border: #28b485 1px solid;
   background-color: #fff;
+  //   padding-bottom: 12rem;
+  //   border: 1rem solid #fff;
+  border-bottom: 2rem solid #fff;
+  padding: 0 5rem;
   ul {
     list-style-type: none;
   }
 
   li:nth-child(2) {
-    // border: rgba(211, 0, 116, 0.9) 5px solid;
     margin-right: 1rem;
   }
 
   li:nth-child(3) {
-    // border: rgba(179, 211, 0, 0.9) 5px solid;
     margin-right: 1rem;
   }
 
@@ -83,9 +84,9 @@ nav {
   }
 
   li a {
-    // border: #28b485 1px solid;
+    border: 1px red solid;
+
     display: inline-block;
-    // padding: 8px;
     transform: translateY(0.7rem);
     text-decoration: none;
     color: $color-darkGray;
@@ -104,4 +105,5 @@ nav {
 
 .content {
   margin-top: 10rem;
+  padding: 0 5rem;
 }
