working on active nav bar

--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -98,7 +98,7 @@ nav {
   }
 
   li .active a {
-    color: $color-darkGreen;
+    background-color: $color-darkGreen;
     text-decoration: underline;
   }
 }
