--- a/resources/sass/index.css
+++ b/resources/sass/index.css
@@ -39,7 +39,6 @@ body {
 .logo-icon {
   width: 30px;
   height: auto;
-  border: 1px red solid;
   -webkit-transform: translateY(0.3rem);
           transform: translateY(0.3rem);
 }
@@ -63,7 +62,7 @@ body {
 nav {
   background-color: #fff;
   border-bottom: 2rem solid #fff;
-  padding: 0 5rem;
+  padding: 0 10rem;
 }
 
 nav ul {
@@ -71,11 +70,11 @@ nav ul {
 }
 
 nav li:nth-child(2) {
-  margin-right: 1rem;
+  margin-right: 1.5rem;
 }
 
 nav li:nth-child(3) {
-  margin-right: 1rem;
+  margin-right: 1.5rem;
 }
 
 nav li {
@@ -83,7 +82,6 @@ nav li {
 }
 
 nav li a {
-  border: 1px red solid;
   display: inline-block;
   -webkit-transform: translateY(0.7rem);
           transform: translateY(0.7rem);
@@ -96,9 +94,8 @@ nav li a:hover {
   color: #28b485;
 }
 
-nav li .active a {
-  background-color: #28b485;
-  text-decoration: underline;
+nav .active a {
+  color: #28b485;
 }
 
 .sticky {
@@ -109,6 +106,114 @@ nav li .active a {
 
 .content {
   margin-top: 10rem;
-  padding: 0 5rem;
+  padding: 0 10rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.profile {
+  width: 20rem;
+  height: 20rem;
+  float: right;
+}
+
+.wave {
+  -webkit-animation-name: wave-animation;
+          animation-name: wave-animation;
+  /* Refers to the name of your @keyframes element below */
+  -webkit-animation-duration: 2.5s;
+          animation-duration: 2.5s;
+  /* Change to speed up or slow down */
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  /* Never stop waving :) */
+  -webkit-transform-origin: 70% 70%;
+          transform-origin: 70% 70%;
+  /* Pivot around the bottom-left palm */
+  display: inline-block;
+}
+
+@-webkit-keyframes wave-animation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  10% {
+    -webkit-transform: rotate(14deg);
+            transform: rotate(14deg);
+  }
+  /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    -webkit-transform: rotate(-8deg);
+            transform: rotate(-8deg);
+  }
+  30% {
+    -webkit-transform: rotate(14deg);
+            transform: rotate(14deg);
+  }
+  40% {
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  60% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  /* Reset for the last half to pause */
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes wave-animation {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  10% {
+    -webkit-transform: rotate(14deg);
+            transform: rotate(14deg);
+  }
+  /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    -webkit-transform: rotate(-8deg);
+            transform: rotate(-8deg);
+  }
+  30% {
+    -webkit-transform: rotate(14deg);
+            transform: rotate(14deg);
+  }
+  40% {
+    -webkit-transform: rotate(-4deg);
+            transform: rotate(-4deg);
+  }
+  50% {
+    -webkit-transform: rotate(10deg);
+            transform: rotate(10deg);
+  }
+  60% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  /* Reset for the last half to pause */
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+.article-body {
+  margin-top: 3rem;
+}
+
+.footer-wrap {
+  text-align: center;
+  font-size: 1.5rem;
 }
 /*# sourceMappingURL=index.css.map */
