--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -2,6 +2,7 @@ $color-primary: rgba(53, 0, 211, 0.9);
 $color-darkGray: #444;
 $color-lightGreen: #7ed56f;
 $color-darkGreen: #28b485;
+$padding-left-right: 10rem;
 
 @font-face {
   font-family: "circular-std-bold";
@@ -43,7 +44,7 @@ body {
   width: 30px;
   height: auto;
   //   transform: translateY(4px);
-  border: 1px red solid;
+  //   border: 1px red solid;
   transform: translateY(0.3rem);
 }
 .logo-text {
@@ -63,20 +64,18 @@ body {
 
 nav {
   background-color: #fff;
-  //   padding-bottom: 12rem;
-  //   border: 1rem solid #fff;
   border-bottom: 2rem solid #fff;
-  padding: 0 5rem;
+  padding: 0 $padding-left-right;
   ul {
     list-style-type: none;
   }
 
   li:nth-child(2) {
-    margin-right: 1rem;
+    margin-right: 1.5rem;
   }
 
   li:nth-child(3) {
-    margin-right: 1rem;
+    margin-right: 1.5rem;
   }
 
   li {
@@ -84,7 +83,7 @@ nav {
   }
 
   li a {
-    border: 1px red solid;
+    // border: 1px red solid;
 
     display: inline-block;
     transform: translateY(0.7rem);
@@ -97,9 +96,9 @@ nav {
     color: $color-darkGreen;
   }
 
-  li .active a {
-    background-color: $color-darkGreen;
-    text-decoration: underline;
+  .active a {
+    color: $color-darkGreen;
+    // text-decoration: underline;
   }
 }
 
@@ -111,5 +110,56 @@ nav {
 
 .content {
   margin-top: 10rem;
-  padding: 0 5rem;
+  padding: 0 $padding-left-right;
+  display: flex;
+}
+
+.profile {
+  width: 20rem;
+  height: 20rem;
+  float: right;
+}
+
+.wave {
+  animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
+  animation-duration: 2.5s; /* Change to speed up or slow down */
+  animation-iteration-count: infinite; /* Never stop waving :) */
+  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  display: inline-block;
+}
+
+@keyframes wave-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  } /* The following five values can be played with to make the waving more or less extreme */
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  } /* Reset for the last half to pause */
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.article-body {
+  margin-top: 3rem;
+}
+
+.footer-wrap {
+  text-align: center;
+  font-size: 1.5rem;
 }
