working on projects page

--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -163,3 +163,34 @@ nav {
   text-align: center;
   font-size: 1.5rem;
 }
+
+.projects-container {
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  grid-template-rows: repeat(3, 300px);
+}
+
+.box1 {
+  background-image: url("../images/tetris2.png");
+  background-size: cover;
+}
+
+.box2 {
+  background-image: url("../images/pathfinder2.png");
+  background-size: cover;
+}
+
+.box3 {
+  background-image: url("../images/agario.png");
+  background-size: cover;
+}
+
+.box4 {
+  background-image: url("../images/myreads.png");
+  background-size: cover;
+}
+
+.box5 {
+  background-image: url("../images/dino.png");
+  background-size: cover;
+}
