--- a/resources/sass/index.css
+++ b/resources/sass/index.css
@@ -104,6 +104,12 @@ nav .active a {
   width: 100%;
 }
 
+.project-header {
+  margin-top: 10rem;
+  text-align: center;
+  font-size: 3rem;
+}
+
 .content {
   margin-top: 10rem;
   padding: 0 10rem;
@@ -239,19 +245,26 @@ nav .active a {
   width: 25vw;
   height: 45vh;
   border: 1px black solid;
+  overflow: hidden;
 }
 
 .box1 {
+  width: 100%;
+  height: 100%;
   background-color: black;
   background-image: url("../images/tetris2.png");
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .box1:hover,
 .box1:focus {
-  background-image: -webkit-gradient(linear, left top, right bottom, from(#7ed56fb0), to(#28b485ad)), url("../images/tetris2.png");
-  background-image: linear-gradient(to right bottom, #7ed56fb0, #28b485ad), url("../images/tetris2.png");
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .box2 {
