--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -103,6 +103,12 @@ nav {
   width: 100%;
 }
 
+.project-header {
+  margin-top: 10rem;
+  text-align: center;
+  font-size: 3rem;
+}
+
 .content {
   margin-top: 10rem;
   padding: 0 $padding-left-right;
@@ -183,19 +189,30 @@ nav {
   width: 25vw;
   height: 45vh;
   border: 1px black solid;
+  overflow: hidden;
 }
 
 .box1 {
+  width: 100%;
+  height: 100%;
   background-color: black;
   background-image: url("../images/tetris2.png");
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+  transition: all 0.5s ease;
 }
 
 .box1:hover,
 .box1:focus {
-  background-image: linear-gradient(to right bottom, #7ed56fb0, #28b485ad),
-    url("../images/tetris2.png");
+  // background-image: linear-gradient(to right bottom, #7ed56fb0, #28b485ad),
+  // url("../images/tetris2.png");
+  -ms-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transform: scale(1.2);
 }
 .box2 {
   background-color: black;
