working on overflow hidden

--- a/resources/sass/index.css
+++ b/resources/sass/index.css
@@ -130,13 +130,10 @@ nav .active a {
           animation-name: wave-animation;
   -webkit-animation-duration: 2.5s;
           animation-duration: 2.5s;
-  /* Change to speed up or slow down */
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  /* Never stop waving :) */
   -webkit-transform-origin: 70% 70%;
           transform-origin: 70% 70%;
-  /* Pivot around the bottom-left palm */
   display: inline-block;
 }
 
@@ -149,7 +146,6 @@ nav .active a {
     -webkit-transform: rotate(14deg);
             transform: rotate(14deg);
   }
-  /* The following five values can be played with to make the waving more or less extreme */
   20% {
     -webkit-transform: rotate(-8deg);
             transform: rotate(-8deg);
@@ -170,7 +166,6 @@ nav .active a {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
   }
-  /* Reset for the last half to pause */
   100% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
@@ -186,7 +181,6 @@ nav .active a {
     -webkit-transform: rotate(14deg);
             transform: rotate(14deg);
   }
-  /* The following five values can be played with to make the waving more or less extreme */
   20% {
     -webkit-transform: rotate(-8deg);
             transform: rotate(-8deg);
@@ -207,7 +201,6 @@ nav .active a {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
   }
-  /* Reset for the last half to pause */
   100% {
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
@@ -237,20 +230,19 @@ nav .active a {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (1fr)[2];
       grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 0.5vh;
-  grid-row-gap: 2vw;
+  grid-column-gap: 2vh;
+  grid-row-gap: 1vw;
+  overflow: hidden;
 }
 
-.projects-box {
+.project-box {
   width: 25vw;
   height: 45vh;
-  border: 1px black solid;
+  border: 10px red solid;
   overflow: hidden;
 }
 
 .box1 {
-  width: 100%;
-  height: 100%;
   background-color: black;
   background-image: url("../images/tetris2.png");
   background-position: center;
@@ -259,12 +251,33 @@ nav .active a {
   vertical-align: middle;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
+  overflow: hidden;
+}
+
+.box1 span {
+  display: none;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .box1:hover,
 .box1:focus {
+  background-image: -webkit-gradient(linear, left top, right bottom, from(#a8dadce3), to(#457b9dda)), url("../images/tetris2.png");
+  background-image: linear-gradient(to right bottom, #a8dadce3, #457b9dda), url("../images/tetris2.png");
   -webkit-transform: scale(1.2);
   transform: scale(1.2);
+}
+
+.box1:hover span,
+.box1:focus span {
+  display: block;
+  color: white;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .box2 {
@@ -298,19 +311,29 @@ nav .active a {
 .download-cv-button {
   text-transform: uppercase;
   text-decoration: none;
-  color: #28b485;
+  background-color: #28b485;
   border: 2px solid #28b485;
+  color: white;
   padding: 1rem 2rem;
   border-radius: 3rem;
   text-align: center;
   display: inline-block;
   margin-top: 2rem;
+  font-size: 1.5rem;
 }
 
 .download-cv-button:hover {
-  background-color: #28b485;
-  color: white;
-  border: 2px solid #28b485;
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+  -webkit-box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+
+.download-cv-button:active {
+  -webkit-transform: translateY(1px);
+          transform: translateY(1px);
+  -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .view-project-button {
