--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -124,9 +124,9 @@ nav {
 
 .wave {
   animation-name: wave-animation;
-  animation-duration: 2.5s; /* Change to speed up or slow down */
-  animation-iteration-count: infinite; /* Never stop waving :) */
-  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+  transform-origin: 70% 70%;
   display: inline-block;
 }
 
@@ -136,7 +136,7 @@ nav {
   }
   10% {
     transform: rotate(14deg);
-  } /* The following five values can be played with to make the waving more or less extreme */
+  }
   20% {
     transform: rotate(-8deg);
   }
@@ -151,7 +151,7 @@ nav {
   }
   60% {
     transform: rotate(0deg);
-  } /* Reset for the last half to pause */
+  }
   100% {
     transform: rotate(0deg);
   }
@@ -177,24 +177,18 @@ nav {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  // grid-template-areas:
-  //   "box1 box2"
-  //   "box3 box4"
-  //   "box5 fr";
-  grid-column-gap: 0.5vh;
-  grid-row-gap: 2vw;
+  grid-column-gap: 2vh;
+  grid-row-gap: 1vw;
+  overflow: hidden;
+  // border: 10px red solid;
 }
-
-.projects-box {
+.project-box {
   width: 25vw;
   height: 45vh;
-  border: 1px black solid;
+  border: 10px red solid;
   overflow: hidden;
 }
-
 .box1 {
-  width: 100%;
-  height: 100%;
   background-color: black;
   background-image: url("../images/tetris2.png");
   background-position: center;
@@ -202,17 +196,31 @@ nav {
   background-repeat: no-repeat;
   vertical-align: middle;
   transition: all 0.5s ease;
+  overflow: hidden;
+  span {
+    display: none;
+    transition: all 0.5s ease;
+  }
 }
 
 .box1:hover,
 .box1:focus {
-  // background-image: linear-gradient(to right bottom, #7ed56fb0, #28b485ad),
-  // url("../images/tetris2.png");
+  background-image: linear-gradient(to right bottom, #a8dadce3, #457b9dda),
+    url("../images/tetris2.png");
   -ms-transform: scale(1.2);
   -moz-transform: scale(1.2);
   -webkit-transform: scale(1.2);
   -o-transform: scale(1.2);
   transform: scale(1.2);
+  span {
+    display: block;
+    color: white;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 .box2 {
   background-color: black;
@@ -245,19 +253,25 @@ nav {
 .download-cv-button {
   text-transform: uppercase;
   text-decoration: none;
-  color: $color-darkGreen;
+  background-color: $color-darkGreen;
   border: 2px solid $color-darkGreen;
+  color: white;
   padding: 1rem 2rem;
   border-radius: 3rem;
   text-align: center;
   display: inline-block;
   margin-top: 2rem;
+  font-size: 1.5rem;
 }
 
 .download-cv-button:hover {
-  background-color: $color-darkGreen;
-  color: white;
-  border: 2px solid $color-darkGreen;
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+
+.download-cv-button:active {
+  transform: translateY(1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .view-project-button {
