--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -162,7 +162,7 @@ nav {
 }
 
 .footer-wrap {
-  margin-top: 10rem;
+  margin-top: 20rem;
   text-align: center;
   font-size: 1.5rem;
 }
@@ -183,25 +183,30 @@ nav {
 .project-box {
   width: 25vw;
   height: 60vh;
-  border: 10px red solid;
-  // overflow: hidden;
 }
+
 .card {
   overflow: hidden;
   width: 25vw;
   height: 45vh;
+  // border: 1px solid red;
+}
 
-  .project-name {
-    display: flex;
-    align-items: flex-end;
-  }
+.link-container {
+  background-color: $color-darkGreen;
+  color: white;
+  padding: 2rem;
+  border-radius: 1rem;
+  width: 25vw;
+  height: 45vh;
+  display: inline-block;
 }
 
 .card-img {
-  width: inherit;
-  height: inherit;
-  margin: 0;
+  width: 20vw;
+  height: 40vh;
   transition: all 0.5s ease;
+  background-position: center;
 }
 
 .card-img:hover {
@@ -210,6 +215,8 @@ nav {
   -webkit-transform: scale(1.2);
   -o-transform: scale(1.2);
   transform: scale(1.2);
+  cursor: pointer;
+  // background-color: #28b485;
 }
 
 // .box2 {
@@ -237,21 +244,24 @@ nav {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
-.view-project-button {
-  text-transform: uppercase;
+.demo-button {
   text-decoration: none;
-  color: $color-darkGreen;
-  background-color: white;
-  border: 2px solid $color-darkGreen;
+  background-color: $color-darkGreen;
+  color: white;
   padding: 1rem 2rem;
   border-radius: 3rem;
   text-align: center;
   display: inline-block;
-  margin-top: 2rem;
+  font-size: 1.5rem;
+  margin-top: 0.2rem;
 }
 
-.view-project-button:hover {
-  background-color: $color-darkGreen;
-  color: white;
-  border: 2px solid $color-darkGreen;
+.demo-button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+
+.demo-button:active {
+  transform: translateY(1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
