--- a/resources/sass/index.css
+++ b/resources/sass/index.css
@@ -8,7 +8,14 @@
 @font-face {
   font-family: "circular-std-medium";
   src: url("../fonts/CircularStd-Medium.woff") format("woff");
-  font-weight: 500;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "circular-std-book";
+  src: url("../fonts/CircularStd-Book.woff") format("woff");
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -24,7 +31,7 @@ html {
 }
 
 body {
-  font-family: circular-std-medium, Arial, sans-serif;
+  font-family: circular-std-book, Arial, sans-serif;
   font-size: 2rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -41,26 +48,14 @@ body {
   height: auto;
   -webkit-transform: translateY(0.3rem);
           transform: translateY(0.3rem);
-}
-
-.logo-text {
-  display: inline-block;
-  -webkit-transform: translateY(0.7rem);
-          transform: translateY(0.7rem);
-  margin-left: 1rem;
-}
-
-.logo-icon {
+  border-top: #fff 3rem solid;
   cursor: pointer;
-}
-
-.logo-text:hover {
-  cursor: pointer;
-  text-decoration: underline;
 }
 
 nav {
+  font-family: circular-std-medium, Arial, sans-serif;
   background-color: #fff;
+  border-top: #fff 3rem solid;
   border-bottom: 2rem solid #fff;
   padding: 0 10rem;
 }
@@ -115,7 +110,6 @@ nav .active a {
 .profile {
   width: 20rem;
   height: 20rem;
-  float: right;
   margin: 2rem;
 }
 
@@ -201,8 +195,16 @@ nav .active a {
   }
 }
 
+.article-header {
+  margin-left: 29rem;
+}
+
 .article-body {
   margin-top: 3rem;
+  width: 50vw;
+  margin-left: 5rem;
+  float: right;
+  line-height: 2.5rem;
 }
 
 .footer-wrap {
@@ -241,5 +243,17 @@ nav .active a {
           transform: translateY(1px);
   -webkit-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
           box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 992px) {
+  body {
+    background-color: lightblue;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    background-color: olive;
+  }
 }
 /*# sourceMappingURL=index.css.map */
