--- a/resources/sass/project.css
+++ b/resources/sass/project.css
@@ -82,11 +82,21 @@
   body {
     background-color: blue;
   }
+  body .projects-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 @media screen and (max-width: 600px) {
   body {
     background-color: olive;
+  }
+  body .projects-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 /*# sourceMappingURL=project.css.map */
