fixed small issue on nav bar

--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -61,6 +61,7 @@ nav {
   border-top: #fff 3rem solid;
   border-bottom: 2rem solid #fff;
   padding: 0 $padding-left-right;
+  z-index: 1;
   ul {
     list-style-type: none;
   }
