--- a/resources/sass/project.css
+++ b/resources/sass/project.css
@@ -52,6 +52,10 @@
   cursor: pointer;
 }
 
+.project-name {
+  margin-top: 1rem;
+}
+
 .demo-button {
   text-decoration: none;
   background-color: #28b485;
@@ -82,10 +86,12 @@
   body {
     background-color: blue;
   }
-  body .projects-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .projects-container {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -ms-grid-rows: (1fr)[5];
+        grid-template-rows: repeat(5, 1fr);
+        grid-template-areas: "box1 box2" "box3 box4" "box5 1fr";
   }
 }
 
@@ -93,10 +99,12 @@
   body {
     background-color: olive;
   }
-  body .projects-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+  .projects-container {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    -ms-grid-rows: (1fr)[5];
+        grid-template-rows: repeat(5, 1fr);
+        grid-template-areas: "box1" "box2" "box3" "box4" "box5";
   }
 }
 /*# sourceMappingURL=project.css.map */
