--- a/resources/sass/project.scss
+++ b/resources/sass/project.scss
@@ -20,14 +20,15 @@ $padding-left-right: 10rem;
   grid-row-gap: 1vw;
 }
 .project-box {
-  width: 25vw;
-  height: 60vh;
+  width: 500px;
+  height: 500px;
+  border: 1px solid red;
 }
 
 .card {
   overflow: hidden;
-  width: 25vw;
-  height: 45vh;
+  width: 400px;
+  height: 400px;
 }
 
 .link-container {
@@ -35,9 +36,10 @@ $padding-left-right: 10rem;
   color: white;
   padding: 2rem;
   border-radius: 1rem;
-  width: 25vw;
-  height: 45vh;
+  width: 400px;
+  height: 400px;
   display: inline-block;
+  border: 5px solid blue;
 }
 
 .card-img {
@@ -83,8 +85,9 @@ $padding-left-right: 10rem;
 
 @media screen and (max-width: 992px) {
   body {
-    background-color: blue;
+    background-color: lightblue;
   }
+
   .projects-container {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -92,6 +95,22 @@ $padding-left-right: 10rem;
       "box1 box2"
       "box3 box4"
       "box5 1fr";
+  }
+
+  .project-box {
+    width: 250px;
+    height: 330px;
+  }
+
+  .card {
+    overflow: hidden;
+    width: 200px;
+    height: 200px;
+  }
+
+  .link-container {
+    width: 200px;
+    height: 200px;
   }
 }
 
@@ -108,5 +127,21 @@ $padding-left-right: 10rem;
       "box3"
       "box4"
       "box5";
+  }
+
+  .project-box {
+    width: 400px;
+    height: 450px;
+  }
+
+  .card {
+    overflow: hidden;
+    width: 330px;
+    height: 330px;
+  }
+
+  .link-container {
+    width: 330px;
+    height: 330px;
   }
 }
