--- a/resources/sass/index.scss
+++ b/resources/sass/index.scss
@@ -110,7 +110,6 @@ nav {
 .profile {
   width: 20rem;
   height: 20rem;
-  // float: right;
   margin: 2rem;
 }
 
@@ -149,24 +148,19 @@ nav {
   }
 }
 
-.article-header {
-  margin-left: 29rem;
-}
-
 .article-body {
   margin-top: 3rem;
   width: 50vw;
   // border: 1px solid red;
-  // text-align: center;
   margin-left: 5rem;
   float: right;
   line-height: 2.5rem;
 }
 
 .footer-wrap {
-  margin-top: 20rem;
+  margin-top: 10rem;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .social-links {
@@ -198,13 +192,38 @@ nav {
 }
 
 @media screen and (max-width: 992px) {
-  body {
-    background-color: lightblue;
+  .profile {
+    display: flex;
+
+    width: 20rem;
+    height: 20rem;
+    margin: 0 auto;
+    margin-bottom: 3rem;
+  }
+
+  .article-body {
+    align-content: center;
+    line-height: 2.5rem;
+    width: 500px;
+    margin: 0 auto;
   }
 }
 
 @media screen and (max-width: 600px) {
-  body {
-    background-color: olive;
+  .profile {
+    display: flex;
+
+    width: 15rem;
+    height: 15rem;
+    margin: 0 auto;
+    margin-bottom: 3rem;
+  }
+
+  .article-body {
+    align-content: center;
+    line-height: 2.5rem;
+    width: 300px;
+    margin: 0 auto;
+    padding: 0 2rem;
   }
 }
