--- a/resources/sass/project.scss
+++ b/resources/sass/project.scss
@@ -9,7 +9,6 @@ $padding-left-right: 10rem;
   text-align: center;
   font-size: 3rem;
 }
-
 .projects-container {
   width: 100vw;
   height: 100vh;
@@ -22,7 +21,7 @@ $padding-left-right: 10rem;
 .project-box {
   width: 500px;
   height: 500px;
-  border: 1px solid red;
+  //   border: 1px solid red;
 }
 
 .card {
@@ -39,7 +38,7 @@ $padding-left-right: 10rem;
   width: 400px;
   height: 400px;
   display: inline-block;
-  border: 5px solid blue;
+  //   border: 5px solid blue;
 }
 
 .card-img {
@@ -84,10 +83,6 @@ $padding-left-right: 10rem;
 }
 
 @media screen and (max-width: 992px) {
-  body {
-    background-color: lightblue;
-  }
-
   .projects-container {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -99,25 +94,22 @@ $padding-left-right: 10rem;
 
   .project-box {
     width: 250px;
-    height: 330px;
+    height: 360px;
   }
 
   .card {
     overflow: hidden;
-    width: 200px;
-    height: 200px;
+    width: 230px;
+    height: 230px;
   }
 
   .link-container {
-    width: 200px;
-    height: 200px;
+    width: 230px;
+    height: 230px;
   }
 }
 
 @media screen and (max-width: 600px) {
-  body {
-    background-color: olive;
-  }
   .projects-container {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -143,5 +135,10 @@ $padding-left-right: 10rem;
   .link-container {
     width: 330px;
     height: 330px;
+  }
+
+  .footer-wrap {
+    bottom: 0;
+    position: static;
   }
 }
